--- a/index.html
+++ b/index.html
@@ -22,6 +22,20 @@
                 <a href="">Download Excursion (Coming soon!)</a>
             </nav>
         </header>
+        <main>
+            <video src="resources/videos/excursion.mp4"></video>
+            <h2>Your personal travel guide</h2>
+            <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+            <p><img src="resources/images/camp.webp"></p>
+            <p><img src="resources/images/phone.webp"></p>
+            <h1>Coming Soon for iPhone and Android</h1>
+            <nav>
+                <a href="">Download Excursion (Coming soon!)</a>
+            </nav>
+        </main>
+        <footer>
+            <p>&copy; Excursion</p>
+        </footer>
         <script src="" async defer></script>
     </body>
 </html>
